<resources>
    <string name="app_name">Proyecto</string>
    <string name="T1P1">Géneros</string>
    <string name="T1P2">De Los</string>
    <string name="T1P3">Videojuegos</string>
    <string name="img1">Imagen1</string>
    <string name="T2">Menu</string>
    <string name="gen1">MOBA</string>
    <string name="gen2">Aventura</string>
    <string name="gen3">Shooter</string>
    <string name="gen4">Estrategia</string>
    <string name="gen5">Lucha</string>
    <string name="gen6">Survival Horror</string>
    <string name="gen7">Plataformas</string>
    <string name="gen8">RPG</string>
    <string name="gen9">Carreras</string>
    <string name="gen10">No Lineal</string>
    <string name="Tmoba">Género MOBA</string>
    <string name="regresar">Volver</string>
    <string name="moba1">El MOBA es un género que se ha convertido en uno de los principales representantes en el mundo de los eSports.MOBA es el acrónimo de Multiplayer Online Battle Arena, un género que nace de los juegos de estrategia en tiempo real (RTS).</string>
    <string name="moba2">Pese a haber evolucionado, los MOBA todavía guardan muchas similitudes con el género RTS, como el control de los personajes (pinchando donde queremos que se muevan), la cámara cenital, la obtención de recursos o la niebla de guerra en el minimapa, limitando la visión a las zonas donde está nuestro personaje o nuestros aliados.</string>
    <string name="moba3">Por lo general, todos los MOBA dan la opción al jugador de escoger a un héroe o campeón, un alter ego dentro del juego ya predefinido con unas habilidades determinadas. Junto con más jugadores, ya que el MOBA es un juego online por naturaleza, debe acabar con la base del rival antes de que estos destruyan la suya. Para ello debe avanzar por las líneas o calles del mapa, por donde avanzan las tropas para destruir las defensas.</string>
    <string name="moba4">Las unidades controladas por la IA no son lo suficientemente fuertes como para destruir ellas solas la base, sirviendo más para obtener oro y/o experiencia que ayude a los jugadores a subir de nivel y mejorar sus habilidades y estadísticas o comprar objetos que potencian sus poderes.</string>
    <string name="Taventura">Género Aventura</string>
    <string name="aventura1">Son videojuegos en los que el protagonista debe avanzar en la trama interactuando con diversos personajes y objetos, este género de juego se desarrolla siguiendo un guión donde el jugador deberá tomar decisiones, resolver acertijos, explorar el escenario, investigar, etc. llevándolo por distintos niveles ya sean 3D o 2D con distintos retos, muchos de estos lógicos.</string>
    <string name="aventura2">Una característica muy peculiar de este tipo de género es que siempre tienen un jefe en los niveles o jefe de nivel, que no es más que un personaje virtual que debe ser superado para poder continuar la historia que guiará y motivara al videojugador en el transcurso del juego hasta un final que puede variar dependiendo de dichas decisiones.</string>
    <string name="aventura3">Si bien es cierto que en el pasado el género aventura comprendía una gama de subgéneros y estilos más amplia aún si cabe que la que con el paso del tiempo y hasta la actualidad se ha ido consolidando, en la que se podían incluir juegos de lo más variados, muchos de los cuales hoy día consideraríamos pertenecientes a otros estilos como plataformas, rompecabezas e incluso acción, sirviendo en cierto modo como género abanico, para una época en la que apenas si se había empezado a desarrollar algunas fórmulas, sin que estas estuvieran aún lo suficientemente desarrolladas como para reclamar nuevos géneros a los que pertenecer por derecho.</string>
    <string name="Tshooter">Género Shooter</string>
    <string name="shooter1">Son conocidos también como “juegos shooters” estos según la temática y desarrollo pueden clasificarse en diferentes subgéneros como disparos en primera persona, disparos en tercera persona, disparos en primera persona multijugador masivo en línea, acción táctica, videojuegos de disparos de desplazamiento lateral, mata marcianos y videojuegos de pistola.</string>
    <string name="shooter2">En los juegos de disparos el jugador maneja un personaje virtual en primera persona y generalmente lo único que se muestra del personaje en la pantalla es un arma o brazos; la acción se desarrolla en entornos 3D donde se interactúa principalmente aniquilando a otros personajes, abriéndose camino en todos los niveles a base de disparos, donde persisten las escenas de violencia extrema con armamento real, a estos se les suelen incorporan artefactos y dispositivos con dosis de tecnología avanzada que le permiten al videojugador ordenar desde un ataque masivo nuclear hasta destruir planetas enteros.</string>
    <string name="shooter3">Además de eliminar en el espacio virtual a otros jugadores, suelen contener varios modos de juego en los que el hecho de matar a un oponente es solo un medio para alcanzar un objetivo. Ejemplo de esto son los juegos tipo “capturar la bandera”. La red de redes: Internet, proporciona a este género un impulso constante al permitir partidas multijugador online lo que se manifiesta como toda una revolución en este género elevándolo a ser uno de los preferidos de los jugadores.</string>
    <string name="Testrategia">Género Estrategia</string>
    <string name="estrategia1">Se caracterizan por la necesidad de manipular a un numeroso grupo de personajes, objetos o datos para lograr los objetivos. Según su temática los hay de gestión económica o social, pero los bélicos son los más demandados por los jugadores de este género. Mientras, por su mecánica, pueden ser clasificados en juegos de estrategia en tiempo real, o juego de estrategia por turnos.</string>
    <string name="estrategia2">En ambos casos por lo general se suele centrar en la recolección y obtención de recursos, construcción de bases, investigación de tecnologías y producción de unidades, las cuales el videojugardor controla y dirige por lo se requieren una habilidosa manera de pensar y capacidad de planeamiento por parte del jugador, la mayoría son videojuegos de batalla con escenarios históricos. Con Internet surgieron juegos de estrategia online que permitían crear partidas multijugador; esto supuso toda una revolución en el género llegándose a crear comunidades de miles de jugadores.</string>
    <string name="Tlucha">Género Lucha</string>
    <string name="lucha1">Los videojuegos de pelea o lucha son todos aquellos que incluyen combates directos entre personajes virtuales, son juegos basados en el combate cuerpo a cuerpo, usando los puños o armas, estas últimas engloban cualquier objeto inimaginable, que se presente que van desde recoger y utilizar objetos del entorno para ser lanzados como rocas, deposito, cajas, etc. Hasta armas cortas, cortantes y no cortantes como cuchillos, guadañas, espadas, machetes, hachas, hachuelas, bates de béisbol, látigos, llaves, etc.</string>
    <string name="lucha2">En algunos casos podemos encontrar armas y dispositivos sofisticados que le son incorporados avances tecnológicos con una perspectiva futurista, donde estos aparatos suelen atraer la motivación del videojugador resultando para estos más llamativos el juego y en otros tan solo el arsenal se reduce a simple conjuros mágicos. El objetivo es siempre atacar al rival hasta lograr vencerlo, sin importar los medios que el jugador utilice para hacerlo.</string>
    <string name="lucha3">En este género no se incluyen a aquellos juegos que representan deportes de combate como el boxeo ya que sus principios son distintos. Los videojuegos de combate como también se les puede llamar engloban una serie de subgéneros en donde se encuentran los del tipo uno contra uno, de todos contra todos, los de avanzar y pegar y los de Combate por turnos. Este género es uno de los más aclamados del mundo de los videojuegos, de aquí a la prolífera lista de videojuegos de lucha que podemos encontrar en el mercado.</string>
    <string name="Tshorror">Género Survival Horror</string>
    <string name="horror1">Correspondientes al género de terror. El/los protagonistas viven aventuras dónde deben salir airosos de situaciones típicas de una película de terror, centrándose su objetivo principal en escapar de una casa llena de zombis, huir de un asesino, resolver misterios para aplacar a los fantasmas, etc.</string>
    <string name="horror2">Un factor importante es el terror psicológico, ayudado de una buena ambientación y apartado sonoro que incorpora en el juego sonidos chirriantes de una puerta o gemidos de posibles víctimas, así como el tránsito por pasillos oscuros y tenebrosos con escenas de espanto; que en diversas ocasiones causan miedo o angustia en el videojugador hasta poner sus nervios de punta.</string>
    <string name="Tplataformas">Género Plataformas</string>
    <string name="plataformas1">Es uno de los géneros más veteranos, los videojuegos de plataformas se caracterizan por manejar un personaje a través de un escenario (en 2D o actualmente en 3D, donde el jugador utiliza sus habilidades para realizar desplazamientos laterales hacia la izquierda o hacia la derecha, recorrer, saltar o escalar una serie de plataformas, obstáculos y acantilados, con enemigos, mientras se recogen objetos para poder completar el videojuego.</string>
    <string name="Trol">Género RPG</string>
    <string name="rol1">Se inspiran en los juegos de rol clásicos, donde el protagonista interpreta un papel y ha de mejorar sus habilidades mientras interactúa con el entorno y otros personajes. Se suelen también caracterizar por que las decisiones de tu personaje influyen en su futuro próximo, dando la posibilidad de ir por el bien o el mal; es habitual la presencia de elementos como peleas (por turnos o en tiempo real), objetos que se pueden comprar o vender, artículos mágicos y los personajes suelen tener atributos (vida, nivel, experiencia, mana, etc.).</string>
    <string name="rol2">Son diversos los subgéneros que engloba esta categoría: los videojuegos de rol multijugador masivos en línea, o los tácticos, a medio camino entre el género de estrategia y el rol. También otro subgénero no tan popular son los RPG BPT (battle per turn), que se caracterizan por ser videojuegos de rol típicos, pero el combate con los enemigos y la acción transcurre por turnos en escenarios ambientados en el rol del juego; en sus inicios eran en 2D a vista de pájaro y actualmente predominan los entornos 3D aunque todavía existen títulos en 2D, generalmente para plataformas portátiles.</string>
    <string name="rol3">La duración de un sólo videojuego de éstos, ahora demanda mucho tiempo; puede variar mucho para su terminación o fin por parte del usuario promedio. Si se juega a un ritmo sano, detallista y a fondo, no es difícil observar un periodo de varios meses o más de un año (dependerá de la veneración que le dedique cada jugador a determinado título o si lo abandona por períodos).</string>
    <string name="Tcarreras">Género Carreras</string>
    <string name="carreas1">Son videojuegos en los que se pilotan diferentes vehículos, ya sean reales o ficticios, para ganar en diferentes carreras. Inicialmente eran competiciones de coches donde el objetivo era llegar primero a la meta. Con el paso de los años se ha ido ampliando este concepto y actualmente se puede manejar cualquier tipo de vehiculo (coche, moto, lanchas, naves espaciales, etc.) y el objetivo del juego ha ido más allá de llegar primero, este va desde hacer altas puntuaciones haciendo derrapajes “draft” hasta escapar de la policía.</string>
</resources>