<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/T2"
        android:textColor="#693A97"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/coming_soon"
        android:onClick="moba"
        android:text="@string/gen1"
        android:textColor="#9C27B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:fontFamily="@font/coming_soon"
        android:onClick="aventura"
        android:text="@string/gen2"
        android:textColor="#673AB7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:fontFamily="@font/coming_soon"
        android:onClick="shooter"
        android:text="@string/gen3"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:fontFamily="@font/coming_soon"
        android:onClick="estrategia"
        android:text="@string/gen4"
        android:textColor="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:fontFamily="@font/coming_soon"
        android:onClick="lucha"
        android:text="@string/gen5"
        android:textColor="#00BCD4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:fontFamily="@font/coming_soon"
        android:onClick="shorror"
        android:text="@string/gen6"
        android:textColor="#009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:fontFamily="@font/coming_soon"
        android:onClick="plataformas"
        android:text="@string/gen7"
        android:textColor="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:fontFamily="@font/coming_soon"
        android:onClick="rol"
        android:text="@string/gen8"
        android:textColor="#8BC34A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:fontFamily="@font/coming_soon"
        android:onClick="carreras"
        android:text="@string/gen9"
        android:textColor="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/btn10"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:fontFamily="@font/coming_soon"
        android:onClick="nolineal"
        android:text="@string/gen10"
        android:textColor="#FFEB3B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />
</androidx.constraintlayout.widget.ConstraintLayout>